# cuba

./: .gitignore  README.md  cuba.cabal
C/: common_ChiSquare.h  common_Erf.h  common_RCuba.c  common_Random.c  common_debug.h  common_stddecl.h  cuhre_Cuhre.c  cuhre_DoSample.c  cuhre_Integrate.c  cuhre_Rule.c  cuhre_Rule.h  cuhre_common.c  cuhre_decl.h  cuhre_util.h  struct_Random.h  suave_DoSample.c  suave_Fluct.h  suave_Grid.c  suave_Integrate.c  suave_Sample.c  suave_Suave.c  suave_common.c  suave_decl.h  suave_util.h  vegas_DoSample.c  vegas_Grid.c  vegas_Integrate.c  vegas_Vegas.c  vegas_common.c  vegas_decl.h  vegas_util.h
src/: Common.hs  Cuhre.hs  Suave.hs  Vegas.hs
src-exec/: Main.hs
src-exec/Suave/: Main.hs
src-exec/Vegas/: Main.hs
